Salvar dados + formatar input hora

--- a/sistema_de_estacionamento/index.html
+++ b/sistema_de_estacionamento/index.html
@@ -32,7 +32,7 @@
             <div class="field-group">
                 <label for="hora">Hora de Entrada</label>
                 <input type="text" id="editHora" class="hide inputs-fields" value="">
-                <input type="text" id="hora" data-index="new" class="inputs-fields" value="" data-horaatual="">
+                <input type="text" id="hora" data-index="new" class="inputs-fields" value="" data-atual="" data-hora="">
             </div>
 
             <button class="btn-register">Registar Veículo</button>
