Função mascara placa de veiculo

--- a/sistema_de_estacionamento/index.html
+++ b/sistema_de_estacionamento/index.html
@@ -26,7 +26,7 @@
 
             <div class="field-group">
                 <label for="placa">Placa do Veículo</label>
-                <input type="text" id="placa" data-index="new" class="inputs-fields" required>
+                <input type="text" id="placa" data-index="new" class="inputs-fields" oninput="formatCarPlate(this);" required>
             </div>
 
             <div class="field-group">
